refactor tests to remove all mocks, add tests for rule that fuses rel with PinotLogicalEnrichedJoin